feat: add all base join edge cases and tests
