# src/main/java/com/kf/touchbase/rest/BaseJoinController.java
@@ -6,13 +6,12 @@ import com.kf.touchbase.models.domain.postgres.BaseMember;
 import com.kf.touchbase.models.dto.BaseJoinListRes;
 import com.kf.touchbase.models.dto.BaseJoinReq;
 import com.kf.touchbase.repository.BaseJoinRepository;
-import com.kf.touchbase.services.BaseMemberServiceImpl;
+import com.kf.touchbase.repository.BaseRepository;
+import com.kf.touchbase.services.BaseJoinServiceImpl;
 import com.kf.touchbase.utils.AuthUtils;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.MediaType;
 import io.micronaut.http.annotation.*;
-import io.micronaut.scheduling.TaskExecutors;
-import io.micronaut.scheduling.annotation.ExecuteOn;
 import io.micronaut.security.annotation.Secured;
 import io.micronaut.security.authentication.Authentication;
 import io.micronaut.security.authentication.AuthenticationException;
@@ -20,6 +19,7 @@ import io.micronaut.security.rules.SecurityRule;
 import io.reactivex.Single;
 import lombok.RequiredArgsConstructor;
 
+import java.util.Optional;
 import java.util.UUID;
 
 @RequiredArgsConstructor
@@ -27,25 +27,27 @@ import java.util.UUID;
 @Secured(SecurityRule.IS_AUTHENTICATED)
 public class BaseJoinController {
 
-    private final BaseMemberServiceImpl baseMemberService;
+    private final BaseJoinServiceImpl baseJoinService;
     private final BaseJoinRepository baseJoinRepository;
+    private final BaseRepository baseRepository;
 
     @Get
     @Produces(MediaType.APPLICATION_JSON)
-    @ExecuteOn(TaskExecutors.IO)
-    public Single<BaseJoinListRes> getOwnBaseJoins(Authentication authentication) {
+    public Single<BaseJoinListRes> getOwnBaseJoins(
+            Authentication authentication,
+            @QueryValue("isCreated") Optional<Boolean> isCreated) {
         return AuthUtils.getAuthKeyFromAuthRx(authentication)
-                .flatMap(baseMemberService::getOwnBaseJoins);
+                .flatMap((authKey) -> baseJoinService.getCreatedBaseJoins(
+                        isCreated.isPresent() && isCreated.get(), authKey));
     }
 
     @Post
     @Produces(MediaType.APPLICATION_JSON)
-    @ExecuteOn(TaskExecutors.IO)
     public Single<HttpResponse<BaseJoin>> createBaseJoin(
             Authentication authentication,
             @Body BaseJoinReq baseJoinReq) {
         return AuthUtils.getAuthKeyFromAuthRx(authentication)
-                .flatMap((authKey) -> baseMemberService
+                .flatMap((authKey) -> baseJoinService
                         .createBaseJoin(authKey, baseJoinReq.getBaseId(),
                                 baseJoinReq.getUserAuthKey(),
                                 baseJoinReq.getBaseJoinAction()))
@@ -55,12 +57,11 @@ public class BaseJoinController {
 
     @Post("/{baseJoinId}")
     @Produces(MediaType.APPLICATION_JSON)
-    @ExecuteOn(TaskExecutors.IO)
     public Single<HttpResponse<BaseMember>> acceptBaseJoin(
             Authentication authentication,
             UUID baseJoinId) {
         return AuthUtils.getAuthKeyFromAuthRx(authentication)
-                .flatMap((authKey) -> baseMemberService.acceptBaseJoin(authKey,
+                .flatMap((authKey) -> baseJoinService.acceptBaseJoin(authKey,
                         baseJoinId))
                 .flatMap((baseMember) -> Single.just(
                         HttpResponse.created(baseMember)));
@@ -68,7 +69,6 @@ public class BaseJoinController {
 
     @Delete("/{baseJoinId}")
     @Produces(MediaType.APPLICATION_JSON)
-    @ExecuteOn(TaskExecutors.IO)
     public Single<HttpResponse<Success>> declineBaseJoin(
             Authentication authentication,
             UUID baseJoinId) {
@@ -78,15 +78,18 @@ public class BaseJoinController {
                         (authKey, baseJoin) -> {
                             if (baseJoin.getJoiningUser()
                                     .getAuthKey()
-                                    .equals(authKey) || baseJoin.getCreator()
+                                    .equals(authKey)
+                                    || baseJoin.getCreator()
                                     .getAuthKey()
                                     .equals(authKey)) {
                                 return baseJoinRepository.delete(baseJoin);
                             }
-                            throw new AuthenticationException(
-                                    "User not allowed to decline base " +
-                                            "join");
+                            return baseRepository.findIfMemberAdmin(baseJoin.getBase()
+                                    .getId(), authKey)
+                                    .switchIfEmpty(Single.error(AuthenticationException::new))
+                                    .flatMapCompletable(
+                                            (base) -> baseJoinRepository.delete(baseJoin));
                         })
-                .flatMap((baseMember) -> Single.just( HttpResponse.ok(new Success())));
+                .flatMap((baseMember) -> Single.just(HttpResponse.ok(new Success())));
     }
 }
